positioned cards and resized them. this creates an issue with overlapping the form, preventing user interaction... needs fixing

--- a/interactive-card-details-form/src/App.css
+++ b/interactive-card-details-form/src/App.css
@@ -81,7 +81,7 @@ input {
 
 label {
   color: hsl(278, 68%, 11%);
-  font-size: 15px;
+  font-size: 14px;
   margin-top: 20px;
 }
 
